--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <script></script>
+  <head>
+    <link rel='stylesheet' type='text/css' href='./styles.css'>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
+    </script>
+    <script src='./actions/sort.js' type='text/javascript'></script>
   </head>
+  
   <body>
-    <h1>Sortinator Part DEEEeUUUUUUU</h1>
-    <label>Enter a String here
-      <input id='inputString' type='text'></label>
-      <button id='submitBtn' ></button>
-    </label>
+    
+    <h1>Sortinator Part Deux</h1>
+    
+    <section id='main'>
+      <label>Enter a String here
+        <input id='inputString' type='text'></label>
+        <button id='submitBtn'>Submit</button>
+        <table id='output'>
+          <tr>
+            <th>Input String</th>
+            <th colspan='2'>Sorted String</th>
+          <tr>
+        </table>
+      </label>
+  </section>
+  
   </body>
 <html>
